--- a/3.7
+++ b/3.7
@@ -2,30 +2,39 @@
 
 int main()
 {
-	int n=0, n0=0, m=0, i=0, a=0, p=0;
+	int n=0, n0=0, m0=0, m=0, i=0, a=0, p=0;
 	puts("Vvedite nachalnoe kolishestvo chelovek");//vvod dannyix
-	scanf("%d", &n);
+	scanf("%d", &n0);
 	puts(" ");
 	puts("Vvedite chislo slov v chitalke");
-	scanf("%d", &m);
-	int r[n];//rasschet
-	int mas[n];
-	n=n0;
-	for(i=n; i>0; i--)
+	scanf("%d", &m0);
+	int r[999];
+	for(i=0; i<n; n++)//inicial massivov
 	{
-		while(n0-m<0)
+		r[i]=i;
+	}
+	int mas[999];
+	for(i=0; i<n; n++)
+	{
+		mas[i]=0;
+	}
+	n=n0;
+	for(i=n; i>0; i--)//rasschet
+	{
+		m = m0;
+		while(n-m<0)
 		{
-			m=m-n0;
+			m=m-n;
 		}
 		p=a+m;
-		while(p>n0)
+		while(p>n)
 		{
-			p=p-n0;	
+			p=p-n;
 		}
 		mas[i]=r[p];
 		
 		a=m+1;
-		n0--;
+		n--;
 	}
 	printf("%d", mas[n]);
 	printf("%d", mas[n-1]);
