--- a/3.7
+++ b/3.7
@@ -1,43 +1,56 @@
 #include<stdio.h>
-
+#include<stdlib.h>
 int main()
 {
-	int n=0, n0=0, m0=0, m=0, i=0, a=0, p=0;
+	int n=0, n0=0,n00=0, m0=0, m00=0, m=0;
+	int i=0;//vspomog dlya ciclov
+	int q=0;//vspomog dlya velichina
 	puts("Vvedite nachalnoe kolishestvo chelovek");//vvod dannyix
-	scanf("%d", &n0);
+	scanf("%d", &n00);
 	puts(" ");
 	puts("Vvedite chislo slov v chitalke");
-	scanf("%d", &m0);
-	int r[999];
-	for(i=0; i<n; n++)//inicial massivov
+	scanf("%d", &m00);
+	puts(" ");
+	/*int*chel=(int*)malloc(n0*sizeof(int));//sozdyaom din massiv s kol-vo chlenov po odnoimennomy nazvaniy
+	for(i=0; i<n0; i++)
 	{
-		r[i]=i;
+		chel[i]=i;
 	}
-	int mas[999];
-	for(i=0; i<n; n++)
+	int*slov=(int*)malloc(m0*sizeof(int));//sozdyaom din massiv s kol-vo chlenov po odnoimennomy nazvaniy
+	for(i=0; i<m0; i++)
 	{
-		mas[i]=0;
-	}
+		slov[i]=i;
+	}*/
+	int*num_vyb=(int*)malloc(n0*sizeof(int));
+	n0=n00-1;
+	m0=m00-1;
 	n=n0;
-	for(i=n; i>0; i--)//rasschet
+	m=m0;
+	int a=0;//c kogo nachinaem schitat
+	int v=0;//tekyshi nomer vyb chela
+	//raschet
+	for(i=0; i<n00; i++)
 	{
-		m = m0;
-		while(n-m<0)
+		while(m0>n)//+otbros perioda slov v chitalke
 		{
-			m=m-n;
+			m=m0-n-1;//ibo sisteme massiva
 		}
-		p=a+m;
-		while(p>n)
+		v=a+m;//+
+		while(v>n)//+
 		{
-			p=p-n;
+			v=(v+1)-(n+1)-1;//perexod v ss i obr
 		}
-		mas[i]=r[p];
-		
-		a=m+1;
-		n--;
+		v=v-i;
+		num_vyb[i]=v+1;//+ perevod s chel
 	}
-	printf("%d", mas[n]);
-	printf("%d", mas[n-1]);
-	printf("%d", mas[n-2]);
+	
+	for(i=n0; i>(n0-3); i--)//vyvod rezyltata
+	{
+		printf("%i\n", num_vyb[i]);
+	}
+	free(num_vyb);//chistem pamyat posle din massiv s kol-vo chlenov po odnoimennomy nazvaniy
+	/*free(chel);//chistem pamyat posle din massiv s kol-vo chlenov po odnoimennomy nazvaniy
+	free(slov);//chistem pamyat posle din massiv s kol-vo chlenov po odnoimennomy nazvaniy
+	*/
 	return 0;
 }
