--- a/3.8
+++ b/3.8
@@ -2,7 +2,7 @@
 #include<stdio.h>
 #include<stdlib.h>
 #include<math.h>
-int f1(float x);//fyncya vychislenya x
+int f1(float x)//fyncya vychislenya x
 {
 	float znachenye[3], c=0, a1=a, b1=b;
 	znachenie[0]=tan(a)-a;
@@ -24,7 +24,7 @@ int f1(float x);//fyncya vychislenya x
 	x=tan(c)-c;
 	return f1(x);
 }
-int f2(float prod);//fyncya vychislenya prod prod=1 - rabotayem; prod=0 - konchayem
+int f2(float prod)//fyncya vychislenya prod prod=1 - rabotayem; prod=0 - konchayem
 {
 	float znach;
 	znach=pow(10, -10);
