--- a/3.8
+++ b/3.8
@@ -28,7 +28,7 @@ int f2(float prod)//fyncya vychislenya prod prod=1 - rabotayem; prod=0 - konchay
 {
 	float znach;
 	znach=pow(10, -10);
-	if((b-a)>=znach)
+	if((b1-a1)>=znach)
 	{
 	prod=1;	
 	return f2(prod);
