--- a/3.8
+++ b/3.8
@@ -4,7 +4,7 @@
 #include<math.h>
 int f1(float x)//fyncya vychislenya x
 {
-	float znachenye[3], c=0, a1=a, b1=b;
+	float znachenye[3], c=0;
 	znachenie[0]=tan(a)-a;
 	znachenye[1]=tan(b)-b;
 	while(f2(prod)==1)
@@ -38,7 +38,7 @@ int f2(float prod)//fyncya vychislenya prod prod=1 - rabotayem; prod=0 - konchay
 }
 int main()
 {
-	float a=0, b=0, x, prod;
+	float a=0, b=0, a1=a, b1=b, x, prod;
 	puts("Vvedite znaychenia konstov otrezka, snachalo min, a potom max");
 	scanf("%f%f", &a, &b);
 	printf("%f %f\n", a, b);
