--- a/3.8
+++ b/3.8
@@ -5,7 +5,7 @@
 int f1(float x)//fyncya vychislenya x
 {
 	float znachenye[3], c=0;
-	znachenie[0]=tan(a)-a;
+	znachenye[0]=tan(a)-a;
 	znachenye[1]=tan(b)-b;
 	while(f2(prod)==1)
 	{
