--- a/3.8
+++ b/3.8
@@ -20,15 +20,17 @@ int main()
 		if(znachenye[0]*znachenye[2]<0)
 		{
 			b1=c;
+			puts("Otlad1");
 		}
 		else
 		{
-			
 			a1=c;
+			puts("Otlad2");
 		}
-		if((b1-a1)<=znach)
+		if((abs(b1-a1))<=znach)
 		{
-			prod=0;	
+			prod=0;
+			puts("Otlad3");	
 		}
 	}
 	x=tan(c)-c;
