--- a/4.2
+++ b/4.2
@@ -1,1 +1,84 @@
-fgsdhdthx
+#include<stdio.h>
+#include<stdlib.h>
+#include<stdio.h>
+#include<math.h>
+#include<string.h>
+
+int main()
+{
+	int n = 0, X = 0, Y = 10000;
+	/* Zaprachivaem kolichestvo otrezkov */
+	scanf("%d", &n);
+	
+	int *x = (int* )malloc(n*sizeof(int));
+	int *y = (int* )malloc(n*sizeof(int));
+	int *L = (int* )malloc(n*sizeof(int));
+	int *tecdlin = (int* )malloc(n*sizeof(int));
+	for(int i = 0; i < n; ++i)
+	{
+		L[i] = 0;
+		tecdlin[i] = 0;
+	}
+	/* Schityvaem otrezki*/
+	for(int i = 0; i < n; ++i)
+	{
+		scanf("%d %d", &x[i], &y[i]);
+	}
+	/* sortirovka po x[i] */
+	for(int j = 0; j < n; ++j)
+	{
+		for(int i = 0; i < n; ++i)
+		{
+			if(i == 0)
+			{
+				;
+			}
+			else if(x[i] < x[i - 1])
+			{
+				int temp = x[i - 1];
+				x[i - 1] = x[i];
+				x[i] = temp;
+				
+				temp = y[i - 1];
+				y[i - 1] = y[i];
+				y[i] = temp;
+			}
+		}
+	}
+	/* deystvyem po algoritmy, ykazannomy v zadanyr */
+	while( X <= Y)
+	{
+		for(int e = 0; e < n; e++)
+		{
+		int q = 0; 
+		for(int i = 0; i < n; ++i)
+		{
+			if(x[i] <= X)
+			{
+				if((y[i] - X) > tecdlin[i-1]);
+				{
+					tecdlin[i] = (y[i] - X);
+					q = i;
+				}
+				
+	
+			}
+			L[q] = x[q] - y[q];	
+			X = y[q];
+		}
+		}
+	}
+	
+	for(int i = 0; i < n; ++i)
+	{
+		if(L[i] != 0)
+		{
+			printf("%d", L[i]);
+		}
+	}
+	free(tecdlin);
+	free(L);
+	free(x);
+	free(y);
+	return 0;
+}
