--- a/3.6
+++ b/3.6
@@ -1,18 +1,22 @@
-#include <stdio.h>
-#include <math.h>
+#include<stdio.h>
+#include<stdlib.h>
+#include<stdio.h>
+#include<math.h>
+#include<string.h>
 
 int main()
 {
 	int x[3], y[3], a=0, q;
 	
-	for(a=0; a<=3; a++)//ñ÷èòûâàåì êîîðäèíàòû
+	for(a=0; a<=3; a++)//shityvaem coordinaty
+	
 	{
 		scanf("%d", &x[a]);
 		scanf("%d", &y[a]);
 	}
-	for(int i=0; i<4; i++)/*
-	Ñîðòèðîâêà ïî x 4 ðàçà, ïî÷åìó å¸ íàäî äåëàòü 4 ðàçà,
-	ïðîáîâàë äâà ðàçà å¸ äåëàòü, íî íè÷åãî íå ïîëó÷èëîñü.*/
+	
+	/* sortiryem pyzirkom po  vozrastanya x[a] */
+	for(int i=0; i<4; i++)
 	{
 		for(a=0; a<3; a++)
 		{
@@ -27,16 +31,49 @@ int main()
 			}
 		}
 	}
-	float l1,l2,stepen, s;//ðàññ÷åò ñòîðîí
-	
+	/* sortiryem pyzirkom po  vozrastanya x[const] y[a] */
+	for(int i=0; i<4; i++)
+	{
+		for(a=0; a<1; a++)
+		{
+			if(y[a]>y[a+1])
+			{
+				q=y[a];
+				y[a]=y[a+1];
+				y[a+1]=q;
+				q=x[a];
+				x[a]=x[a+1];
+				x[a+1]=q;
+			}
+		}
+	}
+	for(int i=0; i<4; i++)
+	{
+		for(a=2; a<3; a++)
+		{
+			if(y[a]>y[a+1])
+			{
+				q=y[a];
+				y[a]=y[a+1];
+				y[a+1]=q;
+				q=x[a];
+				x[a]=x[a+1];
+				x[a+1]=q;
+			}
+		}
+	}
+	printf("Otladka sortirovki: \n");
 	printf("%d %d\n", x[0], y[0]);
 	printf("%d %d\n", x[1], y[1]);
 	printf("%d %d\n", x[2], y[2]);
 	printf("%d %d\n", x[3], y[3]);
-	stepen=0.5;
+	
+	/* raschet dlin storon => plochadi */
+	float l1, l2, stepen = 0.5, s;
 	l1=pow(((pow((x[1]-x[0]),2))+(pow((y[1]-y[0]),2))),stepen);
 	l2=pow(((pow((x[2]-x[0]),2))+(pow((y[2]-y[0]),2))),stepen);
 	s=l1*l2;
-	printf("%f", s);
+	printf("%lg", s);
+	
 	return 0;	
-}	
+}
