--- a/3.7
+++ b/3.7
@@ -3,7 +3,7 @@
 #include <stdio.h>
 #include <ctype.h>
 
-/* NE mogy nayti ochibky */
+/* NE mogy nayti ochibky, vrode popravil cod normlno, no ne rabotyaen( */
 
 
 
