--- a/21.3
+++ b/21.3
@@ -1,1 +1,64 @@
+#include <string.h>
+#include <stdlib.h>
+#include <stdio.h>
+#include <ctype.h>
 
+typedef struct my_spisok{
+    struct my_spisok* prev;
+    struct my_spisok* next;
+    int a;
+	}spisok;
+
+
+
+spisok * create_spis(){//sozdyaem spisok
+	spisok * head =(spisok*)malloc(sizeof(spisok*));
+    pstr->next = NULL;
+    pstr->prev = NULL;
+    return head;
+}
+
+int push(list_element* e)//dobat element a v konec spiska
+{
+    printf("Vvedite snachenie, kotoroe jelaete dobavit\n.");
+    int n = 0;
+	scanf("%d", &n);
+	spisok * end = e;
+	
+	/* teper soverchim probegky po spisky iha poslediy elemen, ved ekazatel posled element est null */
+    
+	while(e -> next != NULL){
+	    e = e->next;
+    	e->next = &a;
+    }
+	a.prev = e;
+    return 0;
+}
+
+
+
+
+int main()
+{
+	while(1){
+		printf("Spisok komand:\n1 -- sozdat spisok\	n2 -- dobavit element v spisok konec ego\	n3 -- ydalit spisok\	n9 -- konchit programmy");
+		int n = 0;
+		scanf("%d", &n);
+		
+		
+		if(n == 1){
+			spisok * head_element = create_spis();
+		}
+		
+		if(n == 2){
+			n = int push(spisok * head_element);
+			printf("Return value: %d", n);
+		}
+		
+		if(n == 9){
+			break;
+		}
+	}
+	
+	return 0;
+}
